--- a/.gitignore
+++ b/.gitignore
@@ -43,7 +43,9 @@ local.properties
 .mvn/wrapper
 
 ### IntelliJ ###
+.idea
 .idea/
+/.idea
 *.iml
 *.ipr
 *.iws
@@ -85,7 +87,6 @@ chrome-profiler-events.json
 speed-measure-plugin.json
 
 # IDEs and editors
-/.idea
 .project
 .classpath
 .c9/
@@ -119,3 +120,4 @@ Thumbs.db
 /node_modules
 /dist
 package-lock.json
+/.idea/
